for the name of the language, and another for the substitutions that it supports. The developer then must
edit the shell script "generateWebPages.sh" and run it, and it should produce a suitable result.

At the same time the following orthographies have been added: French, Spanish or Portuguese, Maltese and Berber Latin alphabet.

2021-03-02 (no version change still v1.10)
- Add modern south arabian languages: Mehri and Soqotri

- Add support for German.

2021-03-02 v1.11
- Add padding to text area to make text clearer: (because the diacritics sometimes got cut off)

2021-03-02 (no version change)
- Add support for Pinyin
- Add support for Polish
- Add support for Icelandic
- Add support for Irish
- Add support for Scottish Gaelic
- Add support for Latin

2021-03-02 v1.20
- Generate a spreadsheet formula (useful for people who use spreadsheet applications)
- Generate terminal command using Python 3 (for people who work on the command line)

2021-03-03 v1.21
- Fix bug where second character input by user was being ignored. As of this version, it is no longer ignored.
- Implement Buckwalter transliteration system (a reversible romanization system for Arabic) (both ways)

2021-03-03 no change in version number
- Refactor code for generating web pages.
- New feature: generate an index page with links to generated web applications.

2021-03-03 no change in version number
- Separate Spanish and Portuguese instead of existing on a single page.

2021-03-03 v1.22
 - Remove stray apostrophe in replacement string for French (for capital cedilla)
 - include name of app near version number in footer
 - create a simpler to use alternative where no replacement occurs. Instead the user pushes buttons to enter non-ASCII characters.
    - This is called Type and Click instead of Type and Replace.
    
2021-05-21 v1.24
  - Bug fix: no longer skip every second character when transliterating.