@@ -21,7 +21,7 @@
 
 
 	<footer>
-		<p><a style="font-size: x-small; margin-left: 5em" href="https://github.com/elsanussi-s-mneina/type-and-replace-html-js">Get source code and documentation: Type and Click v1.23, (2021-03-11). Made by Elsanussi Mneina</a></p>
+		<p><a style="font-size: x-small; margin-left: 5em" href="https://github.com/elsanussi-s-mneina/type-and-replace-html-js">Get source code and documentation: Type and Click v1.24, (2021-05-21). Made by Elsanussi Mneina</a></p>
 	</footer>
 
 	<script>
@@ -71,32 +71,6 @@
 			document.getElementById("userInputBox").value += character;
 		}
 
-		function transformCharacters()
-		{
-			var oldInput = document.getElementById("userInputBox").value;
-		
-			var newInput = "";
-			var replacedCurrentChar = false;
-			for (var i = 0; i < oldInput.length; i++)
-			{
-				replacedCurrentChar = false;
-				for (var j = 0; j < replacements.length && !replacedCurrentChar; j++)					
-				{
-					if (oldInput.substring(i, i + replacements[j][0].length) == replacements[j][0])
-					{
-						newInput += replacements[j][1];
-						i += replacements[j][0].length; // Skip as many characters as we read in.
-						replacedCurrentChar = true;
-					}
-				}
-				if (!replacedCurrentChar)
-				{
-					newInput += oldInput.charAt(i);
-				}
-			}
-			document.getElementById("userInputBox").value = newInput;
-		
-		}
 
 		// A function that takes an array
 		// and returns a similar array but without
@@ -119,20 +93,6 @@
 			return anArrayWithoutDuplicates;
 		}
 
-		// Some users may prefer seeing the characters change as they type.
-		// This function along with a checkbox allow this behaviour.
-		function updateNormalizationLock()
-		{
-			normalizationLock = document.getElementById("normalizeLock").checked;
-		}
-
-		function reactToUserTypingCharacter()
-		{
-			if (normalizationLock)
-			{
-				transformCharacters();
-			}
-		}
 	</script>
 </body>
 </html>
